# src/system/_controllers/CustomerController.gen.ts
@@ -1,5 +1,5 @@
 /**
- * Generated by veryExpress@0.5.15 
+ * Generated by veryExpress@0.5.19 
  * https://github.com/Justin26l/VeryExpress
  */
 
@@ -8,7 +8,7 @@ import { Router, Request, Response } from 'express';
 
 import { checkSchema, validationResult } from 'express-validator';
 import utils from "./../../system/_utils";
-import MongoQS from 'mongo-ts-querystring';
+import VexResponseError from "../_types/VexResponseError.gen";
 
 import { CustomerModel } from '../_models/CustomerModel.gen';
 
@@ -24,46 +24,7 @@ class CustomerController extends controllerFactory._ControllerFactory {
     public routes() {
         
         
-        this.router.get('/', 
-            checkSchema(            {
-              _id: {
-                in: 'query',
-                optional: { options: { values: 'falsy', checkFalsy: true } },
-                notEmpty: true,
-                isString: true,
-                custom: { options: this.isObjectId }
-              },
-              email: {
-                in: 'query',
-                optional: { options: { values: 'falsy', checkFalsy: true } },
-                notEmpty: true,
-                isString: true
-              },
-              name: {
-                in: 'query',
-                optional: { options: { values: 'falsy', checkFalsy: true } },
-                notEmpty: true,
-                isString: true
-              },
-              phone: {
-                in: 'query',
-                optional: { options: { values: 'falsy', checkFalsy: true } },
-                notEmpty: true,
-                isString: true
-              },
-              active: {
-                in: 'query',
-                optional: { options: { values: 'falsy', checkFalsy: true } },
-                notEmpty: true,
-                isBoolean: true
-              },
-              locale: {
-                in: 'query',
-                optional: { options: { values: 'falsy', checkFalsy: true } },
-                notEmpty: true,
-                isString: true
-              }
-            }),
+        this.router.post('/search', 
             this.getListCustomer.bind(this)
         );
 
@@ -196,36 +157,24 @@ class CustomerController extends controllerFactory._ControllerFactory {
 
     public async getListCustomer(req: Request, res: Response): Promise<Response> {
         try {
-            const validationError = validationResult(req);
-            if ( ! validationError.isEmpty() ) {
-                return utils.response.send(res, 400, {
-                    code: utils.response.code.err_validation, 
-                    result: validationError.array()
-                });
-            };
-            
-            const searchFilter = new MongoQS().parse(req.query);
-            delete searchFilter._select;
-            delete searchFilter._join;
-            
-            let selectedFields : {[key: string]: number} | undefined = undefined;
-            let populateOptions : any | undefined = undefined;
+            const searchFilter = req.body.filter;
+            const selectedFields = utils.common.parseFieldsSelect(req);
+            const populateOptions = utils.common.parseCollectionJoin(req, {});
 
-            try { 
-                selectedFields = utils.common.parseFieldsSelect(req);
-                populateOptions = utils.common.parseCollectionJoin(req, {});
-            } 
-            catch (err:any) { 
-                return utils.response.send(res, 400, {
-                    code: utils.response.code.err_validation, 
-                    result: err.message
-                });
-            };
-
-            const result = await CustomerModel.find(searchFilter, selectedFields).populate(populateOptions);
+            let query = CustomerModel.find(searchFilter, selectedFields);
+            if (populateOptions && Array.isArray(populateOptions) && populateOptions.length > 0) {
+                query = query.populate(populateOptions);
+            }
+            const result = await query;
             return utils.response.send(res, 200, { result });
-        } catch (err:any) {
-            return utils.response.send(res, 500, { result: err.message });
+        } 
+        catch (err:any) {
+            if(err instanceof VexResponseError) {
+                throw err;
+            }
+            else { 
+                return utils.response.send(res, 500, { result: err.message });
+            }
         }
     }
 
